--- a/views/loginForm.ejs
+++ b/views/loginForm.ejs
@@ -25,8 +25,9 @@
                     <span class="c-red"></span>
                     <button type="submit"
                         class="form-control rounded-pill shadow-sm custom-button mt-4 p-2-5">LogIn</button>
-                    <button type="button"
-                        class="form-control rounded-pill shadow-sm custom-button mt-2 mb-4 p-2-5">Back</button>
+                    <a href="/"><button type="button"
+                            class="form-control rounded-pill shadow-sm custom-button mt-2 mb-4 p-2-5">Back</button>
+                    </a>
                 </form>
             </div>
         </div>
@@ -34,6 +35,7 @@
     <script src="./javascripts/loginForm/loginForm.js"></script>
     <script>
         let validation = `<%- locals%>`;
+        validation = JSON.parse(validation);
         if (validation) {
             let data = JSON.parse(validation);
             alert("TRY AGAIN, " + data.errMessage);
