--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -71,7 +71,7 @@
                                 </div>
                             </div>
                             <div class="">
-                                <a href="#reserve-container">
+                                <a href="/#reserve-container">
                                     <button type="button" class="btn btn-danger custom-button">Book
                                         a Table
                                     </button>
