--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -65,7 +65,7 @@
                         <div class="d-flex align-items-center justify-content-end">
                             <div class="d-none d-sm-block">
                                 <div class="admin-scroll-responsive text-center d-flex align-items-center h-font h-color mx-3">
-                                    <a href="/adminLogin">
+                                    <a id="log-out" href="/adminLogin">
                                         Admin Login
                                     </a>
                                 </div>
