--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,4 @@
 <div id="topHeader" class="container-fluid position-relative px-0" style="z-index: 2;">
-
-
-
-    dcsldc,dkcmkdocmokdsmcokdsc
     <div class="for-admin position-absolute top-0 start-50 translate-middle-x w-100">
         <div class="container-fluid px-0 for-shadow ">
             <div class="container-fluid container-lg py-0 py-lg-3">
@@ -15,7 +11,7 @@
                             </div>
                             <div class=" col-lg-8 d-none d-lg-flex align-items-center justify-content-center p-0 m-0">
                                 <div class="row d-flex justify-content-between p-0 m-0 nav-links">
-                                    <div class="col-lg-3 d-flex justify-content-center"><a href="/">Home</a></div>
+                                    <div class="col-lg-3 d-flex justify-content-center"><a href="/">aaaaaa</a></div>
                                     <div class="col-lg-3 d-flex justify-content-center"><a href="/menu">Menu</a></div>
                                     <div class="col-lg-3 d-flex justify-content-center"><a href="/about">About</a></div>
                                     <div class="col-lg-3 d-flex justify-content-center"><a href="/contact">Contact</a>
