--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,7 +11,7 @@
                             </div>
                             <div class=" col-lg-8 d-none d-lg-flex align-items-center justify-content-center p-0 m-0">
                                 <div class="row d-flex justify-content-between p-0 m-0 nav-links">
-                                    <div class="col-lg-3 d-flex justify-content-center"><a href="/">aa</a></div>
+                                    <div class="col-lg-3 d-flex justify-content-center"><a href="/">Home</a></div>
                                     <div class="col-lg-3 d-flex justify-content-center"><a href="/menu">Menu</a></div>
                                     <div class="col-lg-3 d-flex justify-content-center"><a href="/about">About</a></div>
                                     <div class="col-lg-3 d-flex justify-content-center"><a href="/contact">Contact</a>
