finally sessions working ☺.

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Error Page</h1>
-    <a href="http://localhost:8080/" >go to home</a>
+    <a href="/" >go to home</a>
 </body>
 </html>
