--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,7 +13,7 @@
 <body>
     <!-- navbar (header) -->
     <%- include('partials/header') %>
-        <% let imageBasePath='./../../images/menu/' %>
+        <% let imageBasePath='./../../../images/menu/' %>
             <!-- "title" container -->
             <div class="container-fluid header pt-5 p-lg-0 h-font h-color">
                 <div class="row pt-5 pt-lg-0">
