--- a/views/adminView.ejs
+++ b/views/adminView.ejs
@@ -12,7 +12,7 @@
 
 <body>
     <%- include('partials/header') %>
-        <% let imageBasePath='./../../images/menu/' %>
+        <% let imageBasePath='./../../../images/menu/' %>
             <!-- for mobile view -->
             <div class="row">
                 <div class="col-12 d-flex d-md-none p-0">
